tests/error/sliceByteString.uplc
(program 0.0.0 [ [ [ (builtin sliceByteString) (con integer 1)] (con unit ()) ] (con bytestring #00ffaa) ])
